# aws-s3-state-stack

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
contrib/vscode/: init.sh  launch.json  settings.json
src/aws_s3_state_stack/: __init__.py  apps.py  aws.py  backends.py  fixtures.py  settings.py  stacks.py
src/cdktf_helpers/: apps.py  backends.py  cli.py  fixtures.py  pytest_plugin.py  settings.py  stacks.py  utils.py
src/cdktf_helpers/settings/: __init__.py  aws.py  base.py  utils.py
src/cdktf_helpers/settings/aws/: __init__.py  defaults.py  fields.py  settings.py  types.py  utils.py
tests/: cdktf.json  cli.py  conftest.py  main.py  test_app.py  test_cli.py  test_settings.py  test_settings_sources.py  test_stack.py  test_stuff.py  test_types.py  test_utils.py
